# windows-clipboard

./: .gitattributes  .gitignore  Cargo.toml  appveyor.yml  build.bat  copy-meta.rc  copy.c  paste-meta.rc  paste.c  readme.md  test.bat
.github/workflows/: ci.yml  release.yml
ci/: before_deploy.ps1
