[package]
name = "windows-clipboard"
version = "1.1.0"
authors = ["Sindre Sorhus <sindresorhus@gmail.com>", "Vsevolod Strukchinsky <floatdrop@gmail.com>"]
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
